--- a/my_warehouse_app/src/components/LogoImg/LogoImg.module.css
+++ b/my_warehouse_app/src/components/LogoImg/LogoImg.module.css
@@ -1,15 +1,17 @@
 .logoImg {
     padding: 0;
     margin: 0;
-    height: 4.9rem;
-    width: 4.9rem;
+    height: 5.3rem;
+    width: 5.3rem;
     cursor: pointer;
-    border-radius: 3px;
-    padding: 2px;
 }
 
-.logoImg:hover{
-    background-color: rgba(123, 150, 190, 0.585);
-    /* /border: 2px solid rgba(20, 35, 90, 0.568); */
-    box-shadow: inset -3px -3px 7px #0212318a; 
+.logoContainer {
+    padding: 0;
+    margin: 0;
+    border-radius: 7px;
+}
+
+.logoContainer:hover {
+    box-shadow: inset -4px -4px 7px #051d4e3a;
 }
