--- a/my_warehouse_app/src/components/Layout/Layout.module.css
+++ b/my_warehouse_app/src/components/Layout/Layout.module.css
@@ -7,3 +7,18 @@
     width: 90%;
     /* height: 5rem; */
 } 
+
+.mainWrapper:hover > .sidebar {
+    display: block;
+}
+
+.sidebar {
+    display: none;
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 250px;
+    background-color: white;
+    z-index: 1;
+}
