--- a/my_warehouse_app/src/components/Form/Form.module.css
+++ b/my_warehouse_app/src/components/Form/Form.module.css
@@ -1,3 +1,7 @@
+label{
+    margin: 1rem;
+}
+
 .form {
     padding: 2rem;
     text-align: center;
@@ -18,7 +22,7 @@
 input {
     border-radius: 7px;
     border: none;
-    margin-left: 1em;
+    margin-left: 1rem;
     padding: 0.25rem 2rem;
 }
 
