--- a/my_warehouse_app/src/pages/RegistrationPage/RegistrationPage.module.css
+++ b/my_warehouse_app/src/pages/RegistrationPage/RegistrationPage.module.css
@@ -1,4 +1,10 @@
 h2 {
     padding: 2rem;
-    
+}
+
+span {
+    color: rgb(8, 8, 101);
+    font-weight: '900';
+    cursor: pointer;
+    text-decoration: underline;
 }
