Creatged Home page, added styles

--- a/my_warehouse_app/src/components/Layout/Layout.module.css
+++ b/my_warehouse_app/src/components/Layout/Layout.module.css
@@ -5,7 +5,8 @@
     position: absolute;
     margin: 3rem auto;
     width: 90%;
-    /* height: 5rem; */
+    display: flex;
+    justify-content: center;
 } 
 
 .mainWrapper:hover > .sidebar {
