--- a/my_warehouse_app/src/App.css
+++ b/my_warehouse_app/src/App.css
@@ -6,5 +6,12 @@ body {
 
 .centered {
   text-align: center;
+  width: 70%;
 }
 
+.title {
+  padding: 2rem;
+  color: rgb(4, 4, 73);
+  text-shadow: 3px 3px 7px rgba(0, 0, 0, .35);
+  
+}
