--- a/my_warehouse_app/src/pages/ProductsPage/ProductPage.module.css
+++ b/my_warehouse_app/src/pages/ProductsPage/ProductPage.module.css
@@ -1,3 +1,10 @@
 .container {
     padding: 3rem;
+    display: flex;
+    justify-content: center;
+    margin: 1rem;
+}
+
+.product{
+    margin: 1rem;
 }
