--- a/my_warehouse_app/src/pages/ProductsPage/ProductPage.module.css
+++ b/my_warehouse_app/src/pages/ProductsPage/ProductPage.module.css
@@ -8,4 +8,16 @@
 .product{
     margin: 1rem;
     box-shadow: 5px 5px 10px rgba(0,0,0,.35);
+    animation: animate-in 3s ease-out forwards;
+}
+
+@keyframes animate-in {
+    from {
+        opacity: 0;
+        transform: translateY(1rem);
+    }
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
 }
