--- a/my_warehouse_app/src/pages/ProductsPage/ProductPage.module.css
+++ b/my_warehouse_app/src/pages/ProductsPage/ProductPage.module.css
@@ -5,13 +5,34 @@
     margin: 1rem;
 }
 
-.product{
+.product {
     margin: 1rem;
-    box-shadow: 5px 5px 10px rgba(0,0,0,.35);
-    animation: animate-in 3s ease-out forwards;
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.35);
+    animation: animate-in 1s cubic-bezier(0.175, 0.885, 0.32, 1.275) forwards;
+}
+
+h4 {
+    animation: animate-in-header 2s ease-out forwards;
 }
 
 @keyframes animate-in {
+    from {
+        opacity: 0;
+        transform: translateY(3rem);
+    }
+    65% {
+        transform: translateY(-7rem);
+    }
+    85% {
+        transform: translateY(2rem);
+    }
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
+@keyframes animate-in-header {
     from {
         opacity: 0;
         transform: translateY(1rem);
