--- a/my_warehouse_app/src/pages/WarehousesPage/WarehousesPage.module.css
+++ b/my_warehouse_app/src/pages/WarehousesPage/WarehousesPage.module.css
@@ -1,10 +1,12 @@
 .container {
-    padding: 3rem;
     display: flex;
-    justify-content: center;
+    overflow-x: auto;
+    scroll-snap-type: x mandatory;
+    scroll-behavior: smooth;
+    -webkit-overflow-scrolling: touch;
 }
 
-.product {
+.warehouse {
     margin: 0.5rem;
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.35);
     animation: animate-in 1s cubic-bezier(0.175, 0.885, 0.32, 1.275) forwards;
@@ -17,13 +19,15 @@ h4 {
 @keyframes animate-in {
     from {
         opacity: 0;
-        transform: translateY(3rem);
+        transform: translateY(0.4rem);
     }
     65% {
-        transform: translateY(-5rem);
+        opacity: 0.8;
+        transform: translateY(0rem);
     }
     85% {
-        transform: translateY(2rem);
+        opacity: 0.6;
+        transform: translateY(0.5rem);
     }
     to {
         opacity: 1;
