--- a/my_warehouse_app/src/pages/WarehousesPage/WarehousesPage.module.css
+++ b/my_warehouse_app/src/pages/WarehousesPage/WarehousesPage.module.css
@@ -16,6 +16,10 @@ h4 {
     animation: animate-in-header 1s ease-out forwards;
 }
 
+.button {
+    margin: 2rem;
+}
+
 @keyframes animate-in {
     from {
         opacity: 0;
