--- a/my_warehouse_app/src/components/Modal/Modal.module.css
+++ b/my_warehouse_app/src/components/Modal/Modal.module.css
@@ -4,16 +4,22 @@
     left: 0;
     width: 100%;
     height: 100vh;
-    background-color: rgba(0, 0, 0, 0.700);
+    background-color: rgba(0, 0, 0, 0.75);
     z-index: 1;
 }
 
 .modal {
+    height: 43rem;
+    margin-top: 5rem;
     box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.4);
-    padding: 5rem;
+    padding: 3rem 7rem;
     overflow: hidden;
     z-index: 1;
     position: absolute;
     border-radius: 7px;
     background: linear-gradient(46deg, rgb(255, 255, 255) 2%, rgb(122, 163, 214) 100%);
+}
+
+img{
+    height: 20rem;
 }
