Added details to modules for warehouse and product
Added more styles

--- a/my_warehouse_app/src/components/ProductCard/ProductCard.module.css
+++ b/my_warehouse_app/src/components/ProductCard/ProductCard.module.css
@@ -10,3 +10,14 @@
 .normal{
     border: 3px solid darkgray;
 }
+
+.dateContainer p {
+    font-size: 11px;
+    font-weight: 700;
+    color: rgb(94, 120, 153);
+}
+
+.quantity{
+    font-weight: 800;
+    color: rgb(1, 1, 118);
+}
