Changed styles and added margin to product button

--- a/my_warehouse_app/src/components/WarehousesCard/Warehouses.module.css
+++ b/my_warehouse_app/src/components/WarehousesCard/Warehouses.module.css
@@ -1,9 +1,10 @@
 .card {
     width: 18rem;
     background-image: linear-gradient(to right, rgb(208, 227, 236), rgb(161, 173, 224));
-    flex-shrink: 0;
     scroll-snap-align: start;
     margin-right: 1rem;
+    width: 100%;
+    padding: 1rem 4rem;
 }
 
 .dateContainer p {
