--- a/my_warehouse_app/src/pages/WarehousesPage/WarehousesPage.module.css
+++ b/my_warehouse_app/src/pages/WarehousesPage/WarehousesPage.module.css
@@ -12,12 +12,16 @@
     animation: animate-in 1s cubic-bezier(0.175, 0.885, 0.32, 1.275) forwards;
 }
 
+.addItemCard {
+    background-image: linear-gradient(rgb(235, 243, 249), rgb(149, 209, 244));
+}
+
 h4 {
     animation: animate-in-header 1s ease-out forwards;
 }
 
 .button {
-    margin: 2rem;
+    margin: 1rem;
 }
 
 @keyframes animate-in {
