--- a/my_warehouse_app/src/components/WarehousesCard/Warehouses.module.css
+++ b/my_warehouse_app/src/components/WarehousesCard/Warehouses.module.css
@@ -4,7 +4,7 @@
     scroll-snap-align: start;
     margin-right: 1rem;
     width: 100%;
-    padding: 1rem 4rem;
+    /* padding: 1rem 4rem; */
 }
 
 .dateContainer p {
