--- a/my_warehouse_app/src/pages/WarehousesPage/WarehousesPage.module.css
+++ b/my_warehouse_app/src/pages/WarehousesPage/WarehousesPage.module.css
@@ -9,6 +9,8 @@
 .warehouse {
     margin: 0.5rem;
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.35);
+    height: 100%;
+    width: 100%;
     animation: animate-in 1s cubic-bezier(0.175, 0.885, 0.32, 1.275) forwards;
 }
 
