--- a/my_warehouse_app/src/components/Modal/Modal.module.css
+++ b/my_warehouse_app/src/components/Modal/Modal.module.css
@@ -9,10 +9,11 @@
 }
 
 .modal {
-    height: 55rem;
+    height: 53rem;
     margin-top: 5rem;
     box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.4);
     padding: 3rem 9rem;
+    text-align: center;
     overflow: hidden;
     z-index: 1;
     position: absolute;
