--- a/my_warehouse_app/src/components/WarehousesCard/Warehouses.module.css
+++ b/my_warehouse_app/src/components/WarehousesCard/Warehouses.module.css
@@ -7,7 +7,7 @@
 .card:hover {
     box-shadow: 7px 7px 15px rgba(0, 0, 0, .8);
     border: 3px solid rgb(0, 0, 108);
-    padding: 0.5rem;
+    /* padding: 0.5rem; */
 }
 
 .cardBody{
