--- a/my_warehouse_app/src/components/Modal/Modal.module.css
+++ b/my_warehouse_app/src/components/Modal/Modal.module.css
@@ -21,6 +21,19 @@
     background: linear-gradient(46deg, rgb(255, 255, 255) 2%, rgb(122, 163, 214) 100%);
 }
 
+.hazardousModal {
+    height: 53rem;
+    margin-top: 5rem;
+    box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.4);
+    padding: 3rem 9rem;
+    text-align: center;
+    overflow: hidden;
+    z-index: 1;
+    position: absolute;
+    border-radius: 7px;
+    background: linear-gradient(46deg, rgb(255, 255, 255) 2%, rgb(212, 114, 114) 100%);
+}
+
 img{
     height: 20rem;
 }
