--- a/my_warehouse_app/src/components/Layout/SideNavBar/SideNavBar.module.css
+++ b/my_warehouse_app/src/components/Layout/SideNavBar/SideNavBar.module.css
@@ -1,15 +1,23 @@
 .sidebar {
-    animation: animate-in 0.8s ease-out forwards;
+    position: fixed;
+    left: -10rem;
+    top: 5rem;
+    animation: slide-in 0.8s ease-out forwards;
     display: flex;
     flex-direction: column;
     justify-content: center;
     width: 10rem;
     height: calc(100vh - 5rem);
     box-sizing: border-box;
-    border-right: 0.5px solid rgb(182, 182, 182);
+    border-left: 0.5px solid rgb(182, 182, 182);
     padding: 0;
     margin: 0;
-    background-image: linear-gradient( rgb(93, 157, 200), rgb(26, 155, 131))
+    background-image: linear-gradient(rgb(93, 157, 200), rgb(26, 155, 131));
+}
+
+.sidebar.show {
+    left: 0;
+    animation: slide-out 0.8s ease-out forwards;
 }
 
 .sidebar ul {
@@ -20,9 +28,8 @@
 }
 
 .sidebar li {
-    margin: 4rem 0rem;
+    margin: 4rem 0;
     padding: 2rem 0;
-    margin: 12rem 0;
     text-align: center;
 }
 
@@ -44,11 +51,24 @@
     padding: 0.2rem;
 }
 
-@keyframes animate-in {
+@keyframes slide-in {
     from {
+        left: -10rem;
         opacity: 0;
     }
     to {
+        left: 0;
         opacity: 1;
+    }
+}
+
+@keyframes slide-out {
+    from {
+        left: 0;
+        opacity: 1;
+    }
+    to {
+        left: -10rem;
+        opacity: 0;
     }
 }
