--- a/my_warehouse_app/src/App.css
+++ b/my_warehouse_app/src/App.css
@@ -38,6 +38,6 @@ body {
 
 .card {
   align-items: center;
-    background-color: lightblue;
+    background-color: rgb(227, 242, 247);
     box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.3);
 }
