--- a/my_warehouse_app/src/pages/ProductsPage/ProductPage.module.css
+++ b/my_warehouse_app/src/pages/ProductsPage/ProductPage.module.css
@@ -5,52 +5,45 @@
     scroll-snap-type: x mandatory;
     scroll-behavior: smooth;
     -webkit-overflow-scrolling: touch;
-}
-
-.product {
+  }
+  
+  .product {
     margin: 0.5rem;
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.35);
     animation: animate-in 1s cubic-bezier(0.175, 0.885, 0.32, 1.275) forwards;
-}
-
-.addItemCard {
+  }
+  
+  .addItemCard {
     background-image: linear-gradient(rgb(242, 248, 253), rgb(193, 227, 247));
-}
-
-h4 {
+  }
+  
+  h4 {
     animation: animate-in-header 1s ease-out forwards;
-}
-
-.button {
+  }
+  
+  .button {
     margin: 2rem;
-}
-
-@keyframes animate-in {
+  }
+  
+  @keyframes animate-in {
     from {
-        opacity: 0;
-        transform: translateY(0.4rem);
-    }
-    65% {
-        opacity: 0.7;
-        transform: translateY(0rem);
-    }
-    85% {
-        opacity: 0.6;
-        transform: translateY(0.5rem);
+      opacity: 0;
+      transform: translateX(100%);
     }
     to {
-        opacity: 1;
-        transform: translateY(0);
+      opacity: 1;
+      transform: translateX(0);
     }
-}
-
-@keyframes animate-in-header {
+  }
+  
+  @keyframes animate-in-header {
     from {
-        opacity: 0;
-        transform: translateY(1rem);
+      opacity: 0;
+      transform: translateY(1rem);
     }
     to {
-        opacity: 1;
-        transform: translateY(0);
+      opacity: 1;
+      transform: translateY(0);
     }
-}
+  }
+  
