--- a/my_warehouse_app/src/pages/WarehousesPage/WarehousesPage.module.css
+++ b/my_warehouse_app/src/pages/WarehousesPage/WarehousesPage.module.css
@@ -1,6 +1,7 @@
 .container {
     display: flex;
-    overflow-x: auto;
+    justify-content: flex-start;
+    overflow-x: scroll;
     scroll-snap-type: x mandatory;
     scroll-behavior: smooth;
     -webkit-overflow-scrolling: touch;
@@ -29,19 +30,19 @@ h4 {
 @keyframes animate-in {
     from {
         opacity: 0;
-        transform: translateY(0.4rem);
+        transform: translateX(2rem);
     }
     65% {
         opacity: 0.7;
-        transform: translateY(0rem);
+        transform: translateX(0rem);
     }
     85% {
         opacity: 0.6;
-        transform: translateY(0.5rem);
+        transform: translateX(-0.5rem);
     }
     to {
         opacity: 1;
-        transform: translateY(0);
+        transform: translateX(0);
     }
 }
 
